[project]
name = "ps-labs"
version = "0.1.0"
description = "Automation helpers for PortSwigger Web Security Academy labs."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
  "beautifulsoup4>=4.12.0",
  "requests>=2.31.0",
]

[dependency-groups]
dev = [
  "ruff>=0.4.0",
]

[tool.ruff]
src=["src"]
target-version = "py313"
line-length = 100
extend-exclude = [".venv", "venv", "dist", "build", "__pycache__"]

# Core rules:
# F (pyflakes), E/W (pycodestyle), I (import order), N (pep8-naming),
# B (bugbear), UP (pyupgrade), SIM (simplify)
[tool.ruff.lint]
select = ["F", "E", "W", "I", "N", "B", "UP", "SIM"]

# Turn off families you likely don't want for quick scripts:
ignore = [
  "D",        # pydocstyle/docstrings (too heavy for small scripts)
  "ANN",      # type-annotation enforcement
  "COM812",   # trailing comma rules (formatter handles commas)
  "ISC001",   # implicit string concatenation warnings (formatter interaction)
]

# Keep import sorting stable and first-party clear.
[tool.ruff.lint.isort]
known-first-party = ["src"]
force-sort-within-sections = true

# Ruff as formatter (black-like)
[tool.ruff.format]
quote-style = "double"     # optional, pick "double" or "single"
indent-style = "space"
skip-magic-trailing-comma = false
docstring-code-format = true
